--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         <include layout="@layout/app_bar"/>
 
         <FrameLayout
-                android:id="@+id/fragment_container"
+                android:id="@+id/fragment_container_main"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
