--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -74,6 +74,7 @@
     </LinearLayout>
 
     <View
+            android:id="@+id/item_line"
             android:layout_height="1dp"
             android:layout_width="match_parent"
             android:background="@android:color/black"
