--- a/app/src/main/res/layout/fragment_main_settings.xml
+++ b/app/src/main/res/layout/fragment_main_settings.xml
@@ -3,7 +3,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fragment_dashboard">
+        android:id="@+id/fragment_settings">
 
     <LinearLayout
             android:orientation="vertical"
@@ -11,32 +11,22 @@
             android:layout_height="match_parent">
 
         <LinearLayout
+                android:id="@+id/settings_header"
                 android:orientation="horizontal"
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:gravity="center"
-                android:padding="8dp">
-
-            <ImageView
-                    android:src="@drawable/ic_settings_black_24dp"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    android:alpha="0.54"/>
+                android:padding="8dp"
+                android:background="@color/primary">
 
             <TextView
                     android:text="@string/settings"
                     android:textSize="18sp"
-                    android:textColor="@color/textPrimary"
+                    android:textColor="#FFFFFF"
                     android:gravity="top|right"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
         </LinearLayout>
-
-        <View
-                android:layout_height="1dp"
-                android:layout_width="match_parent"
-                android:background="@android:color/black"
-                android:alpha="0.12"/>
 
         <ListView
                 android:id="@android:id/list"
