--- a/app/src/main/res/layout/fragment_main_dashboard.xml
+++ b/app/src/main/res/layout/fragment_main_dashboard.xml
@@ -1,94 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fragment_dashboard">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <ScrollView
-            android:layout_height="match_parent"
+    <android.support.design.widget.TabLayout
+            android:id="@+id/dashboard_tabs"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            app:tabMode="scrollable"
+            android:background="@color/primary"
+            app:tabTextColor="#90FFFFFF"
+            app:tabSelectedTextColor="#FFFFFF"/>
+
+    <android.support.v4.view.ViewPager
+            android:id="@+id/dashboard_view"
             android:layout_width="match_parent"
-            android:scrollbars="vertical">
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:background="#FFFFFF"/>
 
-        <LinearLayout
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:focusableInTouchMode="true"
-                android:orientation="vertical">
-
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                <LinearLayout
-                        android:id="@+id/appoinements_header"
-                        android:orientation="horizontal"
-                        android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
-                        android:gravity="center"
-                        android:padding="8dp"
-                        android:background="@color/primary">
-
-                    <ImageView
-                            android:src="@drawable/ic_watch_later_black_24dp"
-                            android:layout_height="wrap_content"
-                            android:layout_width="wrap_content"
-                            android:tint="#FFFFFF"/>
-
-                    <TextView
-                            android:text="@string/today"
-                            android:textSize="18sp"
-                            android:textColor="#FFFFFF"
-                            android:gravity="top|right"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                </LinearLayout>
-
-                <LinearLayout
-                        android:orientation="vertical"
-                        android:id="@+id/appointments_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                <LinearLayout
-                        android:id="@+id/recent_grades_header"
-                        android:orientation="horizontal"
-                        android:layout_height="wrap_content"
-                        android:layout_width="match_parent"
-                        android:gravity="center"
-                        android:padding="8dp"
-                        android:background="@color/primary">
-
-                    <ImageView
-                            android:src="@drawable/ic_done_all_black_24dp"
-                            android:layout_height="wrap_content"
-                            android:layout_width="wrap_content"
-                            android:tint="#FFFFFF"/>
-
-                    <TextView
-                            android:text="@string/recent_marks"
-                            android:textSize="18sp"
-                            android:textColor="#FFFFFF"
-                            android:gravity="top|right"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-                </LinearLayout>
-
-                <LinearLayout
-                        android:orientation="vertical"
-                        android:id="@+id/recent_grades_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-</android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
