--- a/app/src/main/res/layout/fragment_main_settings.xml
+++ b/app/src/main/res/layout/fragment_main_settings.xml
@@ -1,37 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/fragment_settings">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
-    <LinearLayout
-            android:orientation="vertical"
+    <android.support.design.widget.TabLayout
+            android:id="@+id/settings_tabs"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            app:tabMode="scrollable"
+            android:background="@color/primary"
+            app:tabTextColor="#90FFFFFF"
+            app:tabSelectedTextColor="#FFFFFF"/>
+
+    <android.support.v4.view.ViewPager
+            android:id="@+id/settings_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:background="#FFFFFF"/>
 
-        <LinearLayout
-                android:id="@+id/settings_header"
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:gravity="center"
-                android:padding="8dp"
-                android:background="@color/primary">
-
-            <TextView
-                    android:text="@string/settings"
-                    android:textSize="18sp"
-                    android:textColor="#FFFFFF"
-                    android:gravity="top|right"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-        </LinearLayout>
-
-        <ListView
-                android:id="@android:id/list"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"/>
-
-    </LinearLayout>
 </LinearLayout>
