--- a/app/src/main/res/layout/dialog_login.xml
+++ b/app/src/main/res/layout/dialog_login.xml
@@ -4,25 +4,51 @@
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
               android:orientation="vertical"
-              android:padding="10dp" >
+              android:padding="10dp">
 
-    <EditText
-            android:id="@+id/input_school"
+    <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/school"/>
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
 
-    <EditText
-            android:id="@+id/input_username"
+        <EditText
+                android:id="@+id/input_school"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/school"
+                android:inputType="text"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/username"/>
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
 
-    <EditText
-            android:id="@+id/input_password"
+        <EditText
+                android:id="@+id/input_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/username"
+                android:inputType="text"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:hint="@string/password"/>
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp">
+
+        <EditText
+                android:id="@+id/input_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/password"
+                android:inputType="textPassword"/>
+
+    </android.support.design.widget.TextInputLayout>
 
 </LinearLayout>
