--- a/app/src/main/res/layout/menu_header.xml
+++ b/app/src/main/res/layout/menu_header.xml
@@ -13,8 +13,8 @@
               android:gravity="bottom">
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
             android:id="@+id/profile_picture"
             android:contentDescription="@string/profile_picture"/>
