--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -10,11 +10,18 @@
         android:background="@color/primary">
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
             android:layout_gravity="right"
             android:tint="#ffffff"
             android:id="@+id/toolbar_icon"
             android:layout_marginRight="12dp"/>
+
+    <ImageView
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_gravity="right"
+            android:id="@+id/toolbar_avatar"
+            android:layout_marginRight="10dp"/>
 
 </android.support.v7.widget.Toolbar>
