--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <item name="primary" type="color">#186dee</item>
-    <item name="primaryDark" type="color">#1562d6</item>
+    <item name="primaryDark" type="color">#186dee</item>
     <item name="accent" type="color">#186dee</item>
     <item name="textPrimary" type="color">#86000000</item>
     <item name="textSecondary" type="color">#54000000</item>
